# restic-scheduler

./: Cargo.toml  README.md  config.example.toml  deny.toml  restic-scheduler.spec
.github/workflows/: ci.yml
bash-completion/: restic-scheduler
src/: backup.rs  check.rs  cli.rs  config.rs  main.rs  notification.rs  restic.rs  sandboxing.rs  stats.rs
systemd/: restic-backup@.service  restic-backup@.timer  restic-check@.service  restic-check@.timer
