[package]
name = "restic-scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Restic Scheduler Contributors"]
description = "Automatic restic backup scheduler with TOML configuration"
license = "GPL-3.0"
repository = "https://github.com/antedebaas/restic-scheduler"
keywords = ["backup", "restic", "scheduler", "automation"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

regex = "1.10"
shellwords = "1.1"
fastrand = "2.0"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"