[package]
name = "restic-scheduler"
version = "0.2.3"
edition = "2021"
authors = ["Restic Scheduler Contributors"]
description = "Automatic restic backup scheduler"
license = "GPL-3.0-only"
repository = "https://github.com/antedebaas/restic-scheduler"
keywords = ["backup", "restic", "scheduler", "automation"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellwords = "1.1"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
